# ot-harjoitustyo

./: README.md  tasks.py
invoicingApp/: .coverage  README.md  pyproject.toml  tasks.py
invoicingApp/documentation/: softwarerecuirements.md  timeaccounting.md
invoicingApp/src/: index.py
invoicingApp/src/entities/: invoice.py  user.py
invoicingApp/src/services/: invoice_service.py
invoicingApp/src/ui/: ui.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/maksukortti/unicafe/: pyproject.toml
laskarit/viikko2/maksukortti/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md  tehtava3.md
