[tool.poetry]
name = "invoicingapp"
version = "0.1.0"
description = ""
authors = ["Elsa <elsaryynanen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
coverage = "^6.5.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
